examples/GatewayAPI/01-gatewayclass.yaml
# Gateway API - GatewayClass
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx-gateway
spec:
  controllerName: k8s.io/ingress-nginx
